基本的验证
